Frame stack rework